Create Blog and Index HTML Files

--- a/index.html
+++ b/index.html
@@ -1,5 +1,25 @@
+<!DOCTYPE html>
 <html>
+  <head>
+    <title>Jeff Schneider</title>
+  </head>
   <body>
-      Hello DBC!
+    <nav>
+      <table>
+        <tr>
+          <td><a href="index.html">Home</a></td>
+          <td><a href="aortfolio.html">Portfolio</a></td>
+          <td><a href="about.html">About</a></td>
+          <td><a href="resume.html">Resume</a></td>
+          <td><a href="blog.html">Blog</a></td>
+          <td><a href="contact.html">Contact</a></td>
+        </tr>
+      </table>
+    </nav>
+
+    <section class="hero-image">
+      <img src="hero-img.jpg" />
+    </section>
+
   </body>
 </html>
