Update Index and Blog HTML Files

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </nav>
 
     <section class="hero-image">
-      <img src="hero-img.jpg" />
+      <img src="hero-img.jpg" alt="Jeff's homepage image"/>
     </section>
 
   </body>
