Create blog template, blog template css, hero image, stylesheet.css, wireframe blog.  Update index and blog index html files

--- a/index.html
+++ b/index.html
@@ -1,26 +1,23 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link type="text/css" rel="stylesheet" href="stylesheet.css" />
     <meta charset="UTF-8" />
     <title>Jeff Schneider</title>
   </head>
   <body>
     <nav>
-      <table>
-        <tr>
-          <td><a href="index.html">Home</a></td>
-          <td><a href="aortfolio.html">Portfolio</a></td>
-          <td><a href="about.html">About</a></td>
-          <td><a href="resume.html">Resume</a></td>
-          <td><a href="blog.html">Blog</a></td>
-          <td><a href="contact.html">Contact</a></td>
-        </tr>
-      </table>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="resume.html">Resume</a></li>
+        <li><a href="blog.html">Blog</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
     </nav>
 
-    <section class="hero-image">
-      <img src="hero-img.jpg" alt="Jeff's homepage image"/>
-    </section>
+
 
   </body>
 </html>
