--- a/blog-index.html
+++ b/blog-index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link type="text/css" rel="stylesheet" href="stylesheet.css" />
     <meta charset="UTF-8" />
     <title>Jeff Schneider's Blog</title>
   </head>
   <body>
-    <nav>
+   <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="aortfolio.html">Portfolio</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="resume.html">Resume</a></li>
         <li><a href="blog.html">Blog</a></li>
