udpate to personal blog

--- a/blog-template.html
+++ b/blog-template.html
@@ -16,7 +16,12 @@ My wireframe can be found in my github repo:  https://github.com/jjschnei/jjschn
 
 <html>
   <head>
+
+    <link type="text/css" rel="stylesheet" href="default.css" />
+
     <link type="text/css" rel="stylesheet" href="blog-template-stylesheet.css" />
+
+
     <meta charset="utf-8" />
     <title>Jeff Schneider's Blog</title>
   </head>
