update to blog and reflection

--- a/blog-index.html
+++ b/blog-index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link type="text/css" rel="stylesheet" href="stylesheet.css" />
+    <link type="text/css" rel="stylesheet" href="default.css" />
+
     <meta charset="UTF-8" />
     <title>Jeff Schneider's Blog</title>
   </head>
