--- a/blog-index.html
+++ b/blog-index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link type="text/css" rel="stylesheet" href="default.css" />
+    <link type="text/css" rel="stylesheet" href="blog-template-stylesheet.css" />
 
     <meta charset="UTF-8" />
     <title>Jeff Schneider's Blog</title>
@@ -19,8 +20,8 @@
     </nav>
 
     <section class="feature-blog-post">
-      <figure><a href="first-blog-post.html"><img src="feature-blog-img.jpg" alt="Post Title"/></a>
-        <h2>Feature Blog Post Name</h2>
+      <figure><a href="css-concepts.html"><img src="imgs/BOX_MODEL.png" class="preview" alt="What’s Margin, Border, and Padding?"/></a>
+        <h2><a href="css-concepts.html">What’s Margin, Border, and Padding?</a></h2>
       </figure>
 
     </section>
