--- a/blog-index.html
+++ b/blog-index.html
@@ -14,7 +14,7 @@
         <li><a href="portfolio.html">Portfolio</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="resume.html">Resume</a></li>
-        <li><a href="blog.html">Blog</a></li>
+        <li><a href="blog-index.html">Blog</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
