update image links

--- a/css-concepts.html
+++ b/css-concepts.html
@@ -52,15 +52,15 @@
       </dl>
       <p>
         Let’s take a look at how we would use these terms on a paragraph of text.  Here is the paragraph with no CSS:<br>
-        <img src="imgs/no_styling.jpg" class="medium" />
+        <img src="imgs/no_styling.JPG" class="medium" />
       </p><p>
         Let’s create some CSS to specify the shape of the text box:
         <br>
         <br>
-        <img src="imgs/CSS_example.jpg" />
+        <img src="imgs/CSS_example.JPG" />
       </p><p>
         Here is the resulting element:<br>
-        <img src="imgs/display_example.jpg" class="medium" />
+        <img src="imgs/display_example.JPG" class="medium" />
       </p><p>
         Let’s take a look at what each property did to the box:
           <ul>
