revise contact page

--- a/contact.html
+++ b/contact.html
@@ -25,9 +25,10 @@
       <section>
         <p class="center">
         <ul>
-          <li>email:  jeffjschneider {at} gmail.com</li>
-          <li>phone:  503.730.6006</li>
+          <li>jeffjschneider {at} gmail.com</li>
+          <li><a href="tel:5037306006">503.730.6006</a></li>
           <li><a href="https://www.linkedin.com/in/jeffschneider11" target="_blank">linkedin</a></li>
+          <li><a href="https://github.com/jjschnei" target="_blank">github</a></li>
         </P>
       </section>
         <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
