--- a/portfolio.html
+++ b/portfolio.html
@@ -14,11 +14,10 @@
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
         <link type="text/css" rel="stylesheet" href="default.css" />
-        <link type="text/css" rel="stylesheet" href="stylesheet.css" />
-        <link type="text/css" rel="stylesheet" href="portfolio.css" />
+        <link type="text/css" rel="stylesheet" href="stylesheets/portfolio.css" />
 
-    </head>
-    <body>
+  </head>
+  <body>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
@@ -33,7 +32,37 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+
+    <div class="wrapper">
+      <div class="header">
+        <p>Portfolio</p>
+      </div>
+        <div class = "entry">
+          <figure><img src="imgs/dice-roll.JPG" alt="Creating Classes"/>
+            <figcaption>Figure Caption 1</figcaption>
+          </figure>
+        </div>
+
+        <div class = "entry">
+          <figure><img src="imgs/dice-roll.JPG" alt="Creating Classes"/>
+            <figcaption>Figure Caption 2</figcaption>
+          </figure>
+        </div>
+
+        <div class = "entry">
+          <figure><img src="imgs/dice-roll.JPG" alt="Creating Classes"/>
+            <figcaption>Figure Caption 3</figcaption>
+          </figure>
+        </div>
+
+        <div class = "entry">
+          <figure><img src="imgs/dice-roll.JPG" alt="Creating Classes"/>
+            <figcaption>Figure Caption 4</figcaption>
+          </figure>
+        </div>
+
+      </div>
+
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
