update portfiolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -38,8 +38,8 @@
         <p>Portfolio</p>
       </div>
         <div class = "entry">
-          <figure><img src="imgs/dice-roll.JPG" alt="Creating Classes"/>
-            <figcaption>Figure Caption 1</figcaption>
+          <figure><a href="cheat-sheet.html" ><img src="imgs/javascript_logo.png" alt="Creating Classes"/>
+            <figcaption>JavaScript Objects Cheat Sheet</figcaption> </a>
           </figure>
         </div>
 
