image and update to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -38,8 +38,8 @@
         <p>Portfolio</p>
       </div>
         <div class = "entry">
-          <figure><a href="cheat-sheet.html" ><img src="imgs/javascript_logo.png" alt="Creating Classes"/>
-            <figcaption>JavaScript Objects Cheat Sheet</figcaption> </a>
+          <figure><a href="cheat-sheet.html" ><img src="imgs/javascript_logo.png" alt="Creating Classes"/></a>
+            <figcaption>JS Object Cheat Sheet</figcaption>
           </figure>
         </div>
 
