--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,8 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
     <head>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+        <script type="text/javascript" src="portfolio.js" ></script>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Jeff Schneider's Portfolio</title>
@@ -15,6 +17,7 @@
 
         <link type="text/css" rel="stylesheet" href="default.css" />
         <link type="text/css" rel="stylesheet" href="stylesheets/portfolio.css" />
+
 
 
   </head>
@@ -38,35 +41,34 @@
       <div class="header">
         <p>Portfolio</p>
       </div>
+
         <div class = "entry">
-          <figure><a href="cheat-sheet.html" ><img src="imgs/javascript_logo.png" alt="Creating Classes"/></a>
-            <figcaption>JS Object Cheat Sheet</figcaption>
+          <figure><img src="imgs/dice-roll.JPG" alt="Creating Classes"/>
+            <figcaption>Bread Crumbs</figcaption>
+          </figure>
+        </div>      
+        
+        <div class = "entry">
+          <figure><img src="imgs/dice-roll.JPG" alt="Creating Classes"/>
+            <figcaption>Clea</figcaption>
           </figure>
         </div>
 
         <div class = "entry">
           <figure><img src="imgs/dice-roll.JPG" alt="Creating Classes"/>
-            <figcaption>Figure Caption 2</figcaption>
+            <figcaption>Randeux</figcaption>
           </figure>
         </div>
 
         <div class = "entry">
           <figure><img src="imgs/dice-roll.JPG" alt="Creating Classes"/>
-            <figcaption>Figure Caption 3</figcaption>
-          </figure>
-        </div>
-
-        <div class = "entry">
-          <figure><img src="imgs/dice-roll.JPG" alt="Creating Classes"/>
-            <figcaption>Figure Caption 4</figcaption>
+            <figcaption>Launch Machine</figcaption>
           </figure>
         </div>
 
       </div>
 
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
