jQuery toggle for protfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -43,26 +43,26 @@
       </div>
 
         <div class = "entry">
-          <figure><img src="imgs/dice-roll.JPG" alt="Creating Classes"/>
-            <figcaption>Bread Crumbs</figcaption>
+          <figure><img id='img-1' src="imgs/dice-roll.JPG" alt="Creating Classes"/>
+            <figcaption class="fig-1">Bread Crumbs iOS App</figcaption>
           </figure>
         </div>      
         
         <div class = "entry">
-          <figure><img src="imgs/dice-roll.JPG" alt="Creating Classes"/>
-            <figcaption>Clea</figcaption>
+          <figure><img id='img-2' src="imgs/dice-roll.JPG" alt="Creating Classes"/>
+            <figcaption class="fig-2">Clea - Command Line Email</figcaption>
           </figure>
         </div>
 
         <div class = "entry">
-          <figure><img src="imgs/dice-roll.JPG" alt="Creating Classes"/>
-            <figcaption>Randeux</figcaption>
+          <figure><img id='img-3' src="imgs/dice-roll.JPG" alt="Creating Classes"/>
+            <figcaption class="fig-3">Randeux - More Robust Randomizer</figcaption>
           </figure>
         </div>
 
         <div class = "entry">
-          <figure><img src="imgs/dice-roll.JPG" alt="Creating Classes"/>
-            <figcaption>Launch Machine</figcaption>
+          <figure><img id='img-4' src="imgs/dice-roll.JPG" alt="Creating Classes"/>
+            <figcaption class="fig-4">Launch Machine</figcaption>
           </figure>
         </div>
 
