Add resume page

--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,6 @@
 
     <div class="wrapper">
       <div class="header">
-        <p>Portfolio</p>
       </div>
 
         <div class = "entry">
@@ -50,13 +49,13 @@
         
         <div class = "entry">
           <figure><img id='img-2' src="imgs/dice-roll.JPG" alt="Creating Classes"/>
-            <figcaption class="fig-2">Clea - Command Line Email</figcaption>
+            <figcaption class="fig-2">Clea</figcaption>
           </figure>
         </div>
 
         <div class = "entry">
           <figure><img id='img-3' src="imgs/dice-roll.JPG" alt="Creating Classes"/>
-            <figcaption class="fig-3">Randeux - More Robust Randomizer</figcaption>
+            <figcaption class="fig-3">Randeux</figcaption>
           </figure>
         </div>
 
@@ -66,18 +65,18 @@
           </figure>
         </div>
 
+        <div class = "entry">
+          <figure><img id='img-5' src="imgs/dice-roll.JPG" alt="Creating Classes"/>
+            <figcaption class="fig-5">Speakeasy Briefs</figcaption>
+          </figure>
+        </div>
+
+        <div class = "entry">
+          <figure><img id='img-6' src="imgs/dice-roll.JPG" alt="Creating Classes"/>
+            <figcaption class="fig-6">Sherly Box</figcaption>
+          </figure>
+        </div>
+
       </div>
-
-
-
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='//www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X');ga('send','pageview');
-        </script>
     </body>
 </html>
