Add images to portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -28,9 +28,8 @@
 
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
         <li><a href="about.html">About</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
         <li><a href="resume.html">Resume</a></li>
         <li><a href="blog-index.html">Blog</a></li>
         <li><a href="contact.html">Contact</a></li>
@@ -42,41 +41,58 @@
       </div>
 
         <div class = "entry">
-          <figure><img id='img-1' src="imgs/dice-roll.JPG" alt="Creating Classes"/>
-            <figcaption class="fig-1">Bread Crumbs iOS App</figcaption>
+          <figure>
+            <a href="breadcrumbs.html" alt="Breadcrumbs">
+              <img id='img-1' src="imgs/breadcrumbs.png" alt="breadcrumbs"/>
+            </a>
+            <figcaption class="fig-1">Breadcrumbs iOS App</figcaption>
           </figure>
         </div>      
         
         <div class = "entry">
-          <figure><img id='img-2' src="imgs/dice-roll.JPG" alt="Creating Classes"/>
+          <figure>
+            <a href="clea.html" alt="clea">
+              <img id='img-2' src="imgs/clea.png" alt="clea"/>
+            </a>
             <figcaption class="fig-2">Clea</figcaption>
           </figure>
         </div>
 
         <div class = "entry">
-          <figure><img id='img-3' src="imgs/dice-roll.JPG" alt="Creating Classes"/>
+          <figure>
+            <a href="randeux.html">
+              <img id='img-3' src="imgs/dice-roll.JPG" alt="randeux"/>
+            </a>
             <figcaption class="fig-3">Randeux</figcaption>
           </figure>
         </div>
 
         <div class = "entry">
-          <figure><img id='img-4' src="imgs/dice-roll.JPG" alt="Creating Classes"/>
+          <figure>
+            <a href="launchmachine.html">
+              <img id='img-4' src="imgs/launchmachine.png" alt="launch machine"/>
+            </a>
             <figcaption class="fig-4">Launch Machine</figcaption>
           </figure>
         </div>
 
         <div class = "entry">
-          <figure><img id='img-5' src="imgs/dice-roll.JPG" alt="Creating Classes"/>
+          <figure>
+            <a href="speakeasybriefs.html">
+              <img id='img-5' src="imgs/speakeasybriefslogo.png" alt="speakeasy briefs"/>
+            </a>
             <figcaption class="fig-5">Speakeasy Briefs</figcaption>
           </figure>
         </div>
 
         <div class = "entry">
-          <figure><img id='img-6' src="imgs/dice-roll.JPG" alt="Creating Classes"/>
+          <figure>
+            <a href="sherlybox.html">
+              <img id='img-6' src="imgs/sherlybox.png" alt="sherlybox"/>
+            </a>  
             <figcaption class="fig-6">Sherly Box</figcaption>
           </figure>
         </div>
-
       </div>
     </body>
 </html>
