Add popups to portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -15,8 +15,12 @@
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
+        <link type="text/css" rel="stylesheet" href="portfiolio-popup/css/jquery.popdown.css" />
+
         <link type="text/css" rel="stylesheet" href="default.css" />
         <link type="text/css" rel="stylesheet" href="stylesheets/portfolio.css" />
+
+        
 
 
 
