add images for portfolio projects

--- a/ecommerce.html
+++ b/ecommerce.html
@@ -33,7 +33,7 @@
 							<li>Targeted media lists to get coverage (client PR wins include: BuzzFeed, NPR, FOX News, Business Times &amp; Fortune).</li>
 						</ul>
 					</p>
-					<a href="http://www.speakeasybriefs.com" title="Speakeasy Briefs"><img id="breadcrumbs-img" src="imgs/speakeasybriefs.jpg"/></a>
+					<img id="breadcrumbs-img" src="imgs/e-commerce_site.jpg"/>
 
 				</section>
 
