--- a/portfolio.html
+++ b/portfolio.html
@@ -104,6 +104,24 @@
             <figcaption class="fig-6">Sherly Box</figcaption>
           </figure>
         </div>
+
+        <div class = "entry">
+          <figure>
+            <a class="popdown" href="ecommerce.html">
+              <img class="img" id='img-7' src="imgs/ecommerce4x3.jpg" alt="sherlybox"/>
+            </a>  
+            <figcaption class="fig">eCommerce Platform</figcaption>
+          </figure>
+        </div>
+
+        <div class = "entry">
+          <figure>
+            <a class="popdown" href="girlux.html">
+              <img class="img" id='img-8' src="imgs/grilluxw.jpg" alt="sherlybox"/>
+            </a>  
+            <figcaption class="fig">Girl Lux</figcaption>
+          </figure>
+        </div>
       </div>
     </body>
 </html>
