--- a/girlux.html
+++ b/girlux.html
@@ -33,7 +33,7 @@
 							<li>Targeted media lists to get coverage (client PR wins include: BuzzFeed, NPR, FOX News, Business Times &amp; Fortune).</li>
 						</ul>
 					</p>
-					<a href="http://www.speakeasybriefs.com" title="Speakeasy Briefs"><img id="breadcrumbs-img" src="imgs/speakeasybriefs.jpg"/></a>
+					<a href="http://golaunchmachine.com/girllux-update/" title="Girl Lux"><img id="breadcrumbs-img" src="imgs/GirlLux.jpg"/></a>
 
 				</section>
 
