refactor jquery on porfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
             <a href="breadcrumbs.html" class="popdown" title="Breadcrumbs">
               <img id='img-1' src="imgs/breadcrumbs.png" alt="breadcrumbs"/>
             </a>
-            <figcaption class="fig-1">Breadcrumbs iOS App</figcaption>
+            <figcaption class="fig">Breadcrumbs iOS App</figcaption>
           </figure>
         </div>      
         
@@ -65,7 +65,7 @@
             <a class="popdown" href="clea.html" alt="clea">
               <img id='img-2' src="imgs/clea.png" alt="clea"/>
             </a>
-            <figcaption class="fig-2">Clea</figcaption>
+            <figcaption class="fig">Clea</figcaption>
           </figure>
         </div>
 
@@ -74,7 +74,7 @@
             <a class="popdown" href="randeux.html">
               <img id='img-3' src="imgs/dice-roll.JPG" alt="randeux"/>
             </a>
-            <figcaption class="fig-3">Randeux</figcaption>
+            <figcaption class="fig">Randeux</figcaption>
           </figure>
         </div>
 
@@ -83,7 +83,7 @@
             <a href="launchmachine.html" class="popdown">
               <img id='img-4' src="imgs/launchmachine.png" alt="launch machine"/>
             </a>
-            <figcaption class="fig-4">Launch Machine</figcaption>
+            <figcaption class="fig">Launch Machine</figcaption>
           </figure>
         </div>
 
@@ -92,7 +92,7 @@
             <a class="popdown" href="speakeasybriefs.html">
               <img id='img-5' src="imgs/speakeasybriefslogo.png" alt="speakeasy briefs"/>
             </a>
-            <figcaption class="fig-5">Speakeasy Briefs</figcaption>
+            <figcaption class="fig">Speakeasy Briefs</figcaption>
           </figure>
         </div>
 
@@ -101,7 +101,7 @@
             <a class="popdown" href="sherlybox.html">
               <img id='img-6' src="imgs/sherlybox.png" alt="sherlybox"/>
             </a>  
-            <figcaption class="fig-6">Sherly Box</figcaption>
+            <figcaption class="fig">Sherly Box</figcaption>
           </figure>
         </div>
 
