complete portfolio page

--- a/clea.html
+++ b/clea.html
@@ -24,7 +24,7 @@
 
 					<p>Clea is perfect for getting a quick message out without fumbling with clunky mail clients or web apps.</p>
 
-					<a href="https://rubygems.org/gems/clea">
+					<a href="https://rubygems.org/gems/clea" target="_blank">
 						<img src="https://rubygems.org/favicon.ico" width="170" />
 					</a>
 
