--- a/ecommerce.html
+++ b/ecommerce.html
@@ -2,37 +2,30 @@
 <html>
 
 	<head>
-		<title>LaunchMachine</title>
+		<title>eCommerce</title>
 	</head>
 
 	<body>
 		<div class="popdown-content">
 
 			<header>
-				<h2>Launch Machine</h2>
+				<h2>eCommerce Platform</h2>
 			</header>
 				
 				<section class="body">
 
-					<h3>Digital Marketing Firm</h3>
+					<h3>Webstore</h3>
 
-					<p>Role:  Founder &amp; Growth Engineer</p>
+					<p>Role:  Full Stack Engineer</p>
 
-					<p>Stack:  JavaScript, HTML, CSS</p>
+					<p>Stack:  Rails, JavaScript, jQuery, PostgreSQL, Ruby, AJAX, Stripe, BCrypt, Paperclip</p>
 
-					<p>LaunchMachine provides digital marketing and growthhack solutions to help startups rapidly acquire customers.</p>
+					<p>The client requested a shopping website similar to Amazon.  The eCommerce platform included an inventory management section for admins.  User authentication was also required, as well as automated confirmation emails.</p>
 					<p>
 					<p>
-						As the founder and lead growth engineer, I was responsible for building our website and product offering.  I was also resposible for helping clients achieve:
+						The webstore was built with Rails.  AJAX and jQuery was used to create a dynamic user experience. The site was designed to be responsive and mobile friendly.
 					</p>
-					<p>
-						<ul>
-							<li>ROI driven digital advertising (Facebook Ads with CPAs as low as $7).</li>
-							<li>Custom websites and landing pages that increase social engagement (on average 120%)</li>
-							<li>A/B split testing and U/X engagement optimization.</li>
-							<li>Targeted media lists to get coverage (client PR wins include: BuzzFeed, NPR, FOX News, Business Times &amp; Fortune).</li>
-						</ul>
-					</p>
+					
 					<img id="breadcrumbs-img" src="imgs/e-commerce_site.jpg"/>
 
 				</section>
