--- a/girlux.html
+++ b/girlux.html
@@ -2,38 +2,33 @@
 <html>
 
 	<head>
-		<title>LaunchMachine</title>
+		<title>Girl Lux</title>
 	</head>
 
 	<body>
 		<div class="popdown-content">
 
 			<header>
-				<h2>Launch Machine</h2>
+				<h2>Girl Lux</h2>
 			</header>
 				
 				<section class="body">
 
-					<h3>Digital Marketing Firm</h3>
+					<h3>Kickstarter Campaign</h3>
 
-					<p>Role:  Founder &amp; Growth Engineer</p>
+					<p>Role:  Growth Engineer</p>
 
-					<p>Stack:  JavaScript, HTML, CSS</p>
+					<p>Stack:  JavaScript, HTML, CSS, Photoshop</p>
 
-					<p>LaunchMachine provides digital marketing and growthhack solutions to help startups rapidly acquire customers.</p>
+					<p>Girl Lux hired my company LaunchMachine to manage the marketing of their Kickstarter campaign.</p>
 					<p>
 					<p>
-						As the founder and lead growth engineer, I was responsible for building our website and product offering.  I was also resposible for helping clients achieve:
+						As their growth engineer, I designed and built several landing pages to increase the number of backers as well as boost social media engagement of the project.
 					</p>
 					<p>
-						<ul>
-							<li>ROI driven digital advertising (Facebook Ads with CPAs as low as $7).</li>
-							<li>Custom websites and landing pages that increase social engagement (on average 120%)</li>
-							<li>A/B split testing and U/X engagement optimization.</li>
-							<li>Targeted media lists to get coverage (client PR wins include: BuzzFeed, NPR, FOX News, Business Times &amp; Fortune).</li>
-						</ul>
+						The below 'Update Landing Page', was designed to encourage people to 'Like' their media coverage.  
 					</p>
-					<a href="http://golaunchmachine.com/girllux-update/" title="Girl Lux"><img id="breadcrumbs-img" src="imgs/GirlLux.jpg"/></a>
+					<a href="http://golaunchmachine.com/girllux-update/" title="Girl Lux" target="_blank">><img id="breadcrumbs-img" src="imgs/GirlLux.jpg"/></a>
 
 				</section>
 
