--- a/randeux.html
+++ b/randeux.html
@@ -26,7 +26,7 @@
  
 					<p>The randeaux_index method takes the same arguments, except it returns random indexes instead of random values.</p>
 
-					<a href="https://rubygems.org/gems/randeaux">
+					<a href="https://rubygems.org/gems/randeaux" target="_blank">
 						<img src="https://rubygems.org/favicon.ico" width="170" />
 					</a>
 
