--- a/sherlybox.html
+++ b/sherlybox.html
@@ -9,31 +9,26 @@
 		<div class="popdown-content">
 
 			<header>
-				<h2>SherlyBox</h2>
+				<h2>Sherlybox</h2>
 			</header>
 				
 				<section class="body">
 
-					<h3>Digital Marketing Firm</h3>
+					<h3>Kickstarter Campaign</h3>
 
-					<p>Role:  Founder &amp; Growth Engineer</p>
+					<p>Role:  Growth Engineer</p>
 
-					<p>Stack:  JavaScript, HTML, CSS</p>
+					<p>Stack:  JavaScript, HTML, CSS, Photoshop</p>
 
-					<p>SherlyBox provides digital marketing and growthhack solutions to help startups rapidly acquire customers.</p>
+					<p>Sherlybox hired my company LaunchMachine to manage the marketing of their Kickstarter campaign.</p>
 					<p>
 					<p>
-						As the founder and lead growth engineer, I was responsible for building our website and product offering.  I was also resposible for helping clients achieve:
+						As their growth engineer, I designed and built several landing pages to increase the number of backers as well as boost social media engagement of the project.
 					</p>
 					<p>
-						<ul>
-							<li>ROI driven digital advertising (Facebook Ads with CPAs as low as $7).</li>
-							<li>Custom websites and landing pages that increase social engagement (on average 120%)</li>
-							<li>A/B split testing and U/X engagement optimization.</li>
-							<li>Targeted media lists to get coverage (client PR wins include: BuzzFeed, NPR, FOX News, Business Times &amp; Fortune).</li>
-						</ul>
+						The below 'Backer Boost' landing page, was designed to encourage the existing Kickstarter backers to refer their friends to the project. 
 					</p>
-					<a href="http://golaunchmachine.com/sherlybox-stretch-goal/" title="Sherlybox"><img id="breadcrumbs-img" src="imgs/sherlybox.jpg"/></a>
+					<a href="http://golaunchmachine.com/sherlybox-stretch-goal/" title="Sherlybox" target="_blank"><img id="breadcrumbs-img" src="imgs/sherlybox.jpg"/></a>
 
 				</section>
 
