--- a/speakeasybriefs.html
+++ b/speakeasybriefs.html
@@ -2,38 +2,35 @@
 <html>
 
 	<head>
-		<title>LaunchMachine</title>
+		<title>Speakeasy Briefs</title>
 	</head>
 
 	<body>
 		<div class="popdown-content">
 
 			<header>
-				<h2>Launch Machine</h2>
+				<h2>Speakeasy Briefs</h2>
 			</header>
 				
 				<section class="body">
 
-					<h3>Digital Marketing Firm</h3>
+					<h3>eCommerece Brand &amp; Website</h3>
 
-					<p>Role:  Founder &amp; Growth Engineer</p>
+					<p>Role:  Frontend Developer &amp; Co-Founder</p>
 
-					<p>Stack:  JavaScript, HTML, CSS</p>
+					<p>Stack:  JavaScript, jQuery, AJAX, Liquid, HTML, CSS, Photoshop</p>
 
-					<p>LaunchMachine provides digital marketing and growthhack solutions to help startups rapidly acquire customers.</p>
 					<p>
+						Speakeasy Briefs is a men’s apparel company initially launched on Kickstarter.  As the front-end developer, I designed and built the website.  Once completed, I used A/B split testing to optimize the user experience, which increased the conversion rate by over 70%.
+					</p>
+					
 					<p>
-						As the founder and lead growth engineer, I was responsible for building our website and product offering.  I was also resposible for helping clients achieve:
+						I also implemented digital marketing campaigns utilizing several platforms including Facebook Ads, Google AdWords, Google Analytics, and Twitter Ads.  
 					</p>
 					<p>
-						<ul>
-							<li>ROI driven digital advertising (Facebook Ads with CPAs as low as $7).</li>
-							<li>Custom websites and landing pages that increase social engagement (on average 120%)</li>
-							<li>A/B split testing and U/X engagement optimization.</li>
-							<li>Targeted media lists to get coverage (client PR wins include: BuzzFeed, NPR, FOX News, Business Times &amp; Fortune).</li>
-						</ul>
+						Speakeasy Briefs was recognized as a "top selling merchant" on RedditGifts and was accepted into the Amazon Launchpad program.  Speakeasy Briefs has received national and local news coverage, including:  Forbes, NPR, FOX News, and the San Francisco Chronicle.   
 					</p>
-					<a href="http://www.speakeasybriefs.com" title="Speakeasy Briefs"><img id="breadcrumbs-img" src="imgs/speakeasybriefs.jpg"/></a>
+					<a href="http://www.speakeasybriefs.com" title="Speakeasy Briefs" target="_blank"><img id="breadcrumbs-img" src="imgs/speakeasybriefs.jpg"/></a>
 
 				</section>
 
