--- a/contact.html
+++ b/contact.html
@@ -14,11 +14,10 @@
     <body>
       <nav>
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
           <li><a href="about.html">About</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
           <li><a href="resume.html">Resume</a></li>
-          <li><a href="blog-index.html">Blog</a></li>
+<!--           <li><a href="blog-index.html">Blog</a></li> -->
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
@@ -31,18 +30,7 @@
           <li><a href="https://github.com/jjschnei" target="_blank">github</a></li>
         </P>
       </section>
-        <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-
-        <!-- Google analytics
-          <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='//www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X');ga('send','pageview');
-        </script>
-        -->
+       
 
     </body>
 </html>
