--- a/portfolio.html
+++ b/portfolio.html
@@ -6,13 +6,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
     <head>
 
-       <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
 
-        <script type="text/javascript" src="portfolio-popup/lib/jquery.popdown.js"></script>
-
-        
-
-        <script type="text/javascript" src="portfolio.js" ></script>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Jeff Schneider's Portfolio</title>
@@ -39,11 +33,11 @@
 
     <nav>
       <ul>
-        <li><a href="about.html">About</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
-        <li><a href="resume.html">Resume</a></li>
-        <li><a href="blog-index.html">Blog</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="/about.html">About</a></li>
+        <li><a href="/portfolio.html">Portfolio</a></li>
+        <li><a href="/resume.html">Resume</a></li>
+<!--         <li><a href="/blog-index.html">Blog</a></li> -->
+        <li><a href="/contact.html">Contact</a></li>
       </ul>
     </nav>
 
@@ -125,5 +119,11 @@
         <p><br></p>
         <p><br></p>
       </div>
+
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+
+      <script type="text/javascript" src="portfolio-popup/lib/jquery.popdown.js"></script>
+        
+      <script type="text/javascript" src="portfolio.js" ></script>
     </body>
 </html>
