--- a/resume.html
+++ b/resume.html
@@ -8,11 +8,10 @@
 <body>
 	<nav>
 	  <ul>
-	    <li><a href="index.html">Home</a></li>
+	  	<li><a href="about.html">About</a></li>
 	    <li><a href="portfolio.html">Portfolio</a></li>
-	    <li><a href="about.html">About</a></li>
 	    <li><a href="resume.html">Resume</a></li>
-	    <li><a href="blog-index.html">Blog</a></li>
+<!-- 	    <li><a href="blog-index.html">Blog</a></li> -->
 	    <li><a href="contact.html">Contact</a></li>
 	  </ul>
 	</nav>
