Change about to index page

--- a/index.html
+++ b/index.html
@@ -1,24 +1,47 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    
-    <link type="text/css" rel="stylesheet" href="default.css" />
-    <link type="text/css" rel="stylesheet" href="stylesheet.css" />
-    <meta charset="UTF-8" />
-    <title>Jeff Schneider</title>
-  </head>
-  <body>
+
+
+
+ <html class="no-js">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>About</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+
+        <link type="text/css" rel="stylesheet" href="default.css" />
+        <link type="text/css" rel="stylesheet" href="stylesheet.css" />
+
+
+
+    </head>
+    <body>
     <nav>
       <ul>
+        <li><a href="index.html">About</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
-        <li><a href="about.html">About</a></li>
         <li><a href="resume.html">Resume</a></li>
 <!--         <li><a href="blog-index.html">Blog</a></li> -->
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
+
+    <article>
+        <p>
+            I’m a driven software engineer and entrepreneur hungry to collaborate with amazing people to create meaningful and beautiful things.  Simply stated, I love learning and building.  Whether it be building a company, product or personal Rails project, nothing is more thrilling than transforming an abstract idea into a tangible, real-world solution.
+        </p>
+        <p>
+            In addition to programming and building companies, I love exploring new places, photography, golfing and burritos.
+        </p>    
+    </article>
     <div class="image">
       <img src="imgs/hero-image-sqr.jpg" alt="Jeff Schneider Headshot" />
     </div>
-  </body>
+
+
+        <!-- <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script> -->
+
+    </body>
 </html>
