--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
     <body>
       <nav>
         <ul>
-          <li><a href="about.html">About</a></li>
+          <li><a href="index.html">About</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
           <li><a href="resume.html">Resume</a></li>
 <!--           <li><a href="blog-index.html">Blog</a></li> -->
