--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,7 @@
 
     <nav>
       <ul>
-        <li><a href="/about.html">About</a></li>
+        <li><a href="/index.html">About</a></li>
         <li><a href="/portfolio.html">Portfolio</a></li>
         <li><a href="/resume.html">Resume</a></li>
 <!--         <li><a href="/blog-index.html">Blog</a></li> -->
