Cap image name for sherlybox

--- a/sherlybox.html
+++ b/sherlybox.html
@@ -28,7 +28,7 @@
 					<p>
 						The below 'Backer Boost' landing page, was designed to encourage the existing Kickstarter backers to refer their friends to the project. 
 					</p>
-					<a href="http://golaunchmachine.com/sherlybox-stretch-goal/" title="Sherlybox" target="_blank"><img id="breadcrumbs-img" src="imgs/sherlybox.jpg"/></a>
+					<a href="http://golaunchmachine.com/sherlybox-stretch-goal/" title="Sherlybox" target="_blank"><img id="breadcrumbs-img" src="imgs/sherlybox.JPG"/></a>
 
 				</section>
 
