--- a/about.html
+++ b/about.html
@@ -24,8 +24,8 @@
         <li><a href="portfolio.html">Portfolio</a></li>
         <li><a href="resume.html">Resume</a></li>
 <!--         <li><a href="blog-index.html">Blog</a></li> -->
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
+<!--         <li><a href="contact.html">Contact</a></li>
+ -->      </ul>
     </nav>
 
     <article>
