--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <li><a href="portfolio.html">Portfolio</a></li>
         <li><a href="resume.html">Resume</a></li>
 <!--         <li><a href="blog-index.html">Blog</a></li> -->
-        <li><a href="contact.html">Contact</a></li>
+<!--         <li><a href="contact.html">Contact</a></li> -->
       </ul>
     </nav>
 
