Cap .JPG for portfolio page images

--- a/girlux.html
+++ b/girlux.html
@@ -28,7 +28,7 @@
 					<p>
 						The below 'Update Landing Page', was designed to encourage people to 'Like' their media coverage.  
 					</p>
-					<a href="http://golaunchmachine.com/girllux-update/" title="Girl Lux" target="_blank">><img id="breadcrumbs-img" src="imgs/GirlLux.jpg"/></a>
+					<a href="http://golaunchmachine.com/girllux-update/" title="Girl Lux" target="_blank"><img id="breadcrumbs-img" src="imgs/GirlLux.JPG"/></a>
 
 				</section>
 
