--- a/launchmachine.html
+++ b/launchmachine.html
@@ -33,7 +33,7 @@
 							<li>Targeted media lists to get coverage (client PR wins include: BuzzFeed, NPR, FOX News, Business Times &amp; Fortune).</li>
 						</ul>
 					</p>
-					<a href="http://www.launchmachine.com" title="LaunchMachine" target="_blank"><img id="breadcrumbs-img" src="imgs/launchmachine-white.jpg"/></a>
+					<a href="http://www.launchmachine.com" title="LaunchMachine" target="_blank"><img id="breadcrumbs-img" src="imgs/launchmachine-white.JPG"/></a>
 
 				</section>
 
