--- a/speakeasybriefs.html
+++ b/speakeasybriefs.html
@@ -25,12 +25,12 @@
 					</p>
 					
 					<p>
-						I also implemented digital marketing campaigns utilizing several platforms including Facebook Ads, Google AdWords, Google Analytics, and Twitter Ads.  
+						I also implemented digital marketing campaigns utilizing several platforms including Facebook Ads, Google AdWords, Google Analytics, and Twitter Ads.
 					</p>
 					<p>
 						Speakeasy Briefs was recognized as a "top selling merchant" on RedditGifts and was accepted into the Amazon Launchpad program.  Speakeasy Briefs has received national and local news coverage, including:  Forbes, NPR, FOX News, and the San Francisco Chronicle.   
 					</p>
-					<a href="http://www.speakeasybriefs.com" title="Speakeasy Briefs" target="_blank"><img id="breadcrumbs-img" src="imgs/speakeasybriefs.jpg"/></a>
+					<a href="http://www.speakeasybriefs.com" title="Speakeasy Briefs" target="_blank"><img id="breadcrumbs-img" src="imgs/speakeasybriefs.JPG"/></a>
 
 				</section>
 
