change article tag to div tag on index page

--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
       </ul>
     </nav>
 
-    <article>
+    <div>
         <p>
             I’m a driven software engineer and entrepreneur hungry to collaborate with amazing people to create meaningful and beautiful things.  Simply stated, I love learning and building.  Whether it be building a company, product or personal Rails project, nothing is more thrilling than transforming an abstract idea into a tangible, real-world solution.
         </p>
         <p>
             In addition to programming and building companies, I love exploring new places, photography, golfing and burritos.
         </p>    
-    </article>
+    </div>
     <div class="image">
       <img src="imgs/hero-image-sqr.jpg" alt="Jeff Schneider Headshot" />
     </div>
