--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,7 @@
 <head>
 	<link type="text/css" rel="stylesheet" href="default.css" />
 	<title>Resume</title>
-	<script src="pdfobject/pdfobject.js"></script>
+<!-- 	<script src="pdfobject/pdfobject.js"></script> -->
 </head>
 <body>
 	<nav>
@@ -23,7 +23,7 @@
 	</div> -->
 
 
-	<object data="resume.pdf#page=1" type="application/pdf" width="100%" height="100%">
+	<object class="resume" data="resume.pdf#page=1" type="application/pdf" width="100%" height="100%">
 
 		<iframe src="resume.pdf#page=1" width="100%" height="100%" style="border: none;">
 		This browser does not support PDFs. Please download the PDF to view it: <a href="resume.pdf">Download PDF</a>
