Edit about me copy

--- a/about.html
+++ b/about.html
@@ -15,30 +15,27 @@
 
     </head>
     <body>
-    <nav>
-      <ul>
-        <li><a href="index.html">About</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
-        <li><a href="resume.html">Resume</a></li>
-<!--         <li><a href="blog-index.html">Blog</a></li> -->
-<!--         <li><a href="contact.html">Contact</a></li>
- -->      </ul>
-    </nav>
+        <nav>
+          <ul>
+            <li><a href="index.html">About</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="resume.html">Resume</a></li>
+    <!--         <li><a href="blog-index.html">Blog</a></li> -->
+    <!--         <li><a href="contact.html">Contact</a></li>
+     -->      </ul>
+        </nav>
 
-    <article>
-        <p>
-            I’m a driven software engineer and entrepreneur hungry to collaborate with amazing people to create meaningful and beautiful things.  Simply stated, I love learning and building.  Whether it be building a company, product or personal Rails project, nothing is more thrilling than transforming an abstract idea into a tangible, real-world solution.
-        </p>
-        <p>
-            In addition to programming and building companies, I love exploring new places, photography, golfing and burritos.
-        </p>    
-    </article>
-    <div class="image">
-      <img src="imgs/hero-image-sqr.jpg" alt="Jeff Schneider Headshot" />
-    </div>
-
-
-        <!-- <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script> -->
+        <article>
+            <p>
+                I’m a software engineer and entrepreneur excited to collaborate with people to create meaningful and beautiful things.  Simply stated, I love learning and building.  Whether it be building a company, product or personal Rails project, nothing is more thrilling than transforming an abstract idea into a tangible, real-world solution.
+            </p>
+            <p>
+                In addition to programming and building companies, I love exploring new places, golfing and burritos.
+            </p>    
+        </article>
+        <div class="image">
+          <img src="imgs/hero-image-sqr.jpg" alt="Jeff Schneider Headshot" />
+        </div>
 
     </body>
 </html>
