some text https://app.asana.com/0/180350018127066/372384400521567

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <article>
         <p>
-            I’m a driven software engineer and entrepreneur hungry to collaborate with amazing people to create meaningful and beautiful things.  Simply stated, I love learning and building.  Whether it be building a company, product or personal Rails project, nothing is more thrilling than transforming an abstract idea into a tangible, real-world solution.
+            I’m a developer advoate and entrepreneur that loves to collaborate with amazing people to create meaningful and beautiful things.  Simply stated, I love learning and building.  Whether it be building a company, product or personal Rails project, nothing is more thrilling than transforming an abstract idea into a tangible, real-world solution.
         </p>
         <p>
             In addition to programming and building companies, I love exploring new places, photography, golfing and burritos.
