send me a task https://app.asana.com/0/180350018127066/372384400521566

--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
 
         <article>
             <p>
-                I’m a software engineer and entrepreneur excited to collaborate and create meaningful and beautiful things.  Simply stated, I love learning and building.  Whether it be building a company, product or personal Rails project, nothing is more thrilling than transforming an abstract idea into a tangible, real-world solution.
+                I’m a developer advocate and entrepreneur excited to collaborate and create meaningful and beautiful things.  Simply stated, I love learning and building.  Whether it be building a company, product or personal Rails project, nothing is more thrilling than transforming an abstract idea into a tangible, real-world solution.
             </p>
             <p>
                 In addition to programming, I love learning, exploring new places, podcasts and burritos.  Inspired by Shawn Achor's <a href="https://www.ted.com/talks/shawn_achor_the_happy_secret_to_better_work?language=en" target="blank">TED Talk</a>, I've been trying to encorporate principles of positive psychology into my daily routine:  meditation, excercise, gratitute, positive journaling and random acts of kindness.  I have also been experimenting with limiting my meida consumption in order to cultivate creative space in my life.
